# SVMClassifier

./: .clang-format  .clang-tidy  .clang-uml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT.md  DOCUMENTATION_SETUP.md  Dockerfile  Doxyfile  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SVM_CLASSIFIER_GUIDE.md  annotated.html  build_docs.sh  classes.html  classsvm__classifier_1_1DataConverter-members.html  classsvm__classifier_1_1DataConverter.html  classsvm__classifier_1_1MulticlassStrategyBase-members.html  classsvm__classifier_1_1MulticlassStrategyBase.html  classsvm__classifier_1_1MulticlassStrategyBase__inherit__graph.map  classsvm__classifier_1_1MulticlassStrategyBase__inherit__graph.md5  classsvm__classifier_1_1OneVsOneStrategy-members.html  classsvm__classifier_1_1OneVsOneStrategy.html  classsvm__classifier_1_1OneVsOneStrategy__coll__graph.md5  classsvm__classifier_1_1OneVsOneStrategy__inherit__graph.map  classsvm__classifier_1_1OneVsRestStrategy-members.html  classsvm__classifier_1_1OneVsRestStrategy.html  classsvm__classifier_1_1OneVsRestStrategy__coll__graph.map  classsvm__classifier_1_1OneVsRestStrategy__inherit__graph.md5  classsvm__classifier_1_1SVMClassifier-members.html  classsvm__classifier_1_1SVMClassifier.html  conanfile.py  data__converter_8cpp_source.html  (+42 more)
.claude/: settings.local.json
.github/workflows/: ci.yml
.github/workflows/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
cmake/: CPackConfig.cmake  SVMClassifierConfig.cmake.in
docs/: Doxyfile.in
examples/: CMakeLists.txt  advanced_usage.cpp  basic_usage.cpp
include/svm_classifier/: config.h.in  data_converter.hpp  kernel_parameters.hpp  multiclass_strategy.hpp  svm_classifier.hpp  types.hpp
search/: all_1.js  all_2.js  all_3.js  all_4.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  pages_0.js  pages_1.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  (+5 more)
src/: data_converter.cpp  kernel_parameters.cpp  multiclass_strategy.cpp  svm_classifier.cpp
tests/: CMakeLists.txt  test_data_converter.cpp  test_kernel_parameters.cpp  test_main.cpp  test_multiclass_strategy.cpp  test_performance.cpp  test_svm_classifier.cpp  test_types.cpp
